veloe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: amq
  name: amq
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amq
  strategy:
    type: Recreate
  template:
    metadata:
#      annotations:
#        linkerd.io/inject: enabled
      labels:
        app: amq
    spec:
      containers:
      - image: csturion/apache-mq
        name: amq
        ports:
        - containerPort: 8161
          name: web
          protocol: TCP
        - containerPort: 61613
          name: stomp
          protocol: TCP
        - containerPort: 1883
          name: mqtt
          protocol: TCP
        - containerPort: 61616
          name: openwire
          protocol: TCP
        - containerPort: 9404
          name: jmx
          protocol: TCP
        - containerPort: 5445
          name: hornetq
          protocol: TCP
        - containerPort: 5672
          name: amqp
          protocol: TCP
        - containerPort: 9876
          name: veloe
          protocol: UDP
        - containerPort: 10000
          name: veloe2
          protocol: UDP
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1012Mi
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: efs-claim
      restartPolicy: Always
#      imagePullSecrets:
#        - name: my-registry...
